[package]
name = "jarviz"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wgpu = { version = "0.16", features = ["webgl"] }
js-sys = "0.3"
web-sys = { version = "0.3", features = ["HtmlCanvasElement", "console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
