[package]
name = "jarviz"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wgpu = { version = "0.16", features = ["webgl"] }
js-sys = "0.3"
web-sys = { version = "0.3", features = ["HtmlCanvasElement", "Window", "Document", "console"] }
console_error_panic_hook = "0.1"
bytemuck = "1.9"

[dev-dependencies]
wasm-bindgen-test = "0.3"
